# tidal-midi-rack

./: readme.md  tidal-midi-rack.cabal
Sound/Tidal/: MidiRack.hs  MidiRack2.hs  MidiRack3.hs  Rytm.hs
Sound/Tidal/MIDI/Kindohm/: CustomParams.hs  Erebus.hs  Minilogue.hs  Rack.hs  Rytm.hs  RytmFL.hs  VolcaKeys.hs
